Update reality.txt, vmess_tvc.txt, vmess.txt and related files

--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -12,7 +12,7 @@ proxies:
   - {"name":"🇫🇮FI | 🔴 | vless | @melov2ray | 37","type":"vless","server":"65.109.208.107","port":2083,"udp":false,"uuid":"7dce4e98-52a9-42d1-95e7-996403e310c5","tls":false,"servername":"khamenei.ir","network":"grpc","grpc-opts":{"grpc-service-name":"melov2ray"},"reality-opts":{"public-key":"mDWXgatiJqUc4fmeDQqGusEBIhjFVrQ85y_ZUfNpFV8","short-id":"54602915a7","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇫🇮FI | 🔴 | vless | @melov2ray | 53","type":"vless","server":"65.109.208.107","port":2083,"udp":false,"uuid":"0c2a1be7-cdde-4854-a45c-ddec52584fa1","tls":false,"servername":"khamenei.ir","network":"grpc","grpc-opts":{"grpc-service-name":"melov2ray"},"reality-opts":{"public-key":"mDWXgatiJqUc4fmeDQqGusEBIhjFVrQ85y_ZUfNpFV8","short-id":"54602915a7","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🔴 | vless | @CUSTOMVPNSERVER | 17","type":"vless","server":"91.107.254.202","port":8443,"udp":false,"uuid":"a6580107-b1e0-4057-9f47-ac7f28de457a","tls":false,"servername":"firebase.googleapis.com","network":"xhttp","reality-opts":{"public-key":"4Xu_jqRD-mbhEwNyntlz_6zU4VhsE0-QWCxAbhEL_H4","short-id":"7ab467","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇹🇷TR | 🟢 | vless | @proxy_kafee | 0","type":"vless","server":"45.12.143.191","port":20329,"udp":false,"uuid":"e105e56a-5f81-41a2-ab44-bfffc9b00674","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"Lj3MXlg16CTFHtU88acSS-ACfGnwJ_xkU6dC6k8OeDo","short-id":"4602ee9f9f36","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇹🇷TR | 🟢 | vless | @proxy_kafee | 5","type":"vless","server":"45.12.143.191","port":20329,"udp":false,"uuid":"e105e56a-5f81-41a2-ab44-bfffc9b00674","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"Lj3MXlg16CTFHtU88acSS-ACfGnwJ_xkU6dC6k8OeDo","short-id":"4602ee9f9f36","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🟢 | vless | @Outline_Vpn | 7","type":"vless","server":"185.250.181.128","port":16106,"udp":false,"uuid":"aa1aac84-6a86-41b9-bd34-1a036e06976f","tls":false,"servername":"yahoo.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"FnkrwrjQqktvwxPvLn7KyWZIq8bUAvVaeCrI_VhAZ34","short-id":"3b6239cf6fd84dd3","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇨🇭CH | 🟢 | vless | @Outline_Vpn | 9","type":"vless","server":"5.182.36.251","port":16331,"udp":false,"uuid":"d7dbeb1e-268c-465c-8f59-489f14703efd","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"wYtc0dMr5fw5bBQkbLNpTqtu0m4B9NKnOyEWjRJUmzk","short-id":"910aab","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @Outline_Vpn | 11","type":"vless","server":"deu246.bypassall.org","port":443,"udp":false,"uuid":"b4b8aa1f-77d2-4851-a5a4-f78886f3e997","tls":false,"servername":"www.bing.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"BhTJ3phnq-Z-10aFKSsj1lzhA8mULR4L6leE4-0WTAs","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -29,10 +29,9 @@ proxies:
   - {"name":"❔XX | 🟢 | vless | @prrofile_purple | 132","type":"vless","server":"delta.realtechshop.top","port":443,"udp":false,"uuid":"ff8fffd7-3546-488b-a5f2-a74896da74a2","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇫🇮FI | 🟢 | vless | @prrofile_purple | 136","type":"vless","server":"direct.yasharteam.com","port":443,"udp":false,"uuid":"59db3b45-830a-4b6c-8b7d-9bd6d7189c7d","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🔴 | vless | @prrofile_purple | 141","type":"vless","server":"91.107.243.238","port":2025,"udp":false,"uuid":"3f042483-c71c-40cc-a4b7-d79f80db4253","tls":false,"servername":"www.cloudflare.com","network":"grpc","grpc-opts":{"grpc-service-name":"Telegram : @PouRia_Cheat"},"reality-opts":{"public-key":"AUNIYov4R2TvNmC0cF0NiKWYGqzikosOu4g2wcCALlw","short-id":"8d9c20be72b4","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇩🇪DE | 🟢 | vless | @v2ray1_ng | 5","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US | 🔴 | vless | @ConfigsHUB | 11","type":"vless","server":"45.91.81.111","port":8881,"udp":false,"uuid":"3c1c08fd-4755-454a-9746-72efc50249ed","tls":false,"servername":"addons.mozilla.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"gupSTIXodm3AFVUeU6rfxp_2jID7P7FK_I6CjyLO2ns","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"❔XX | 🔴 | vless | @ConfigsHUB | 13","type":"vless","server":"[2604:a880:4:1d0::e833:b000]","port":443,"udp":false,"uuid":"f2fdcc30-a0c1-434d-94a7-dc8fc2c11a45","tls":false,"servername":"www.icloud.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"oRDRYCRgGMbdf0Vw2qxYZm65qED5k8sFjLxAisMU6W8","short-id":"7487b1","client-fingerprint":"qq"},"client-fingerprint":"qq"}
-  - {"name":"🇺🇸US | 🔴 | vless | @ConfigsHUB | 19","type":"vless","server":"5.181.171.10","port":443,"udp":false,"uuid":"49ed01ad-3bb4-204f-b0ff-a58f658fd618","tls":false,"servername":"speed.cloudflare.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"YNGotlyAx3ELUmi4lxOUjiEDmibqf1pPUTE9o3YYT2Y","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇰🇷KR | 🟢 | vless | @ConfigsHUB | 9","type":"vless","server":"amazon-20.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇩🇰DK | 🟢 | vless | @ConfigsHUB | 14","type":"vless","server":"95.164.85.109","port":59374,"udp":false,"uuid":"bfc78cd8-5951-4803-8d6c-4cedef8cd420","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"ZsswZuBV8bEGQWFrpShCilSytnDUj0kwHFhTSLXzOwc","short-id":"d21e7c","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇩🇪DE | 🟢 | vless | @free1_vpn | 4","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🔴 | vless | @free1_vpn | 5","type":"vless","server":"87.120.205.207","port":2025,"udp":false,"uuid":"ebac2049-8367-4eab-a1a5-8b742b2fd3b6","tls":false,"servername":"yahoo.com","network":"grpc","grpc-opts":{"grpc-service-name":"das12327gsgsyu"},"reality-opts":{"public-key":"Cnuh4bNEBvRIjrYBEWSVhX8nr5j46lHuyen_IU2rbSk","short-id":"a76e2f1d45","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 6","type":"vless","server":"192.145.28.109","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 7","type":"vless","server":"45.83.130.133","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -54,7 +53,6 @@ proxies:
   - {"name":"❔XX | 🔴 | vless | @vpn_go67 | 18","type":"vless","server":"public.alpanel.top","port":1380,"udp":false,"uuid":"58c15a7e-8111-4abb-afd2-47590085c3f4","tls":false,"servername":"www.iranserver.com","network":"grpc","grpc-opts":{"grpc-service-name":"@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam"},"reality-opts":{"public-key":"u2Xf8Og6H4iPcoYIZC8Cm8ziH2LA4ifvpHxEpp8bfUw","short-id":"4c5aaad0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"❔XX | 🔴 | vless | @vpn_go67 | 19","type":"vless","server":"public.alpanel.top","port":1403,"udp":false,"uuid":"671b9a72-7c75-46b9-be82-db2734bae2fc","tls":false,"servername":"tuyacn.com","network":"grpc","grpc-opts":{"grpc-service-name":"@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam"},"reality-opts":{"public-key":"rCdor1DLbQcXbNBD9aiLIoCYHwqTMh8ao9MIPMXo0yA","short-id":"99","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"❔XX | 🔴 | vless | @vpn_go67 | 21","type":"vless","server":"public.alpanel.top","port":1403,"udp":false,"uuid":"4c6451ba-6594-4d67-a8ae-4df79815a4e3","tls":false,"servername":"tuyacn.com","network":"grpc","grpc-opts":{"grpc-service-name":"@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam"},"reality-opts":{"public-key":"rCdor1DLbQcXbNBD9aiLIoCYHwqTMh8ao9MIPMXo0yA","short-id":"99","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇩🇪DE | 🟢 | vless | @kingofilter | 4","type":"vless","server":"91.99.216.9","port":8443,"udp":false,"uuid":"af4d4c00-34ad-4498-ab48-30b4739bd4d3","tls":false,"servername":"refersion.com","network":"tcp","reality-opts":{"public-key":"r3FLw76bxhgit74mzJTglRM-ujPZ9f-HemByQ-uZqms","short-id":"27e6b66aa77662fb","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
 proxy-groups:
   - name: MANUAL
     type: select
@@ -66,7 +64,7 @@ proxy-groups:
       - '🇫🇮FI | 🔴 | vless | @melov2ray | 37'
       - '🇫🇮FI | 🔴 | vless | @melov2ray | 53'
       - '🇩🇪DE | 🔴 | vless | @CUSTOMVPNSERVER | 17'
-      - '🇹🇷TR | 🟢 | vless | @proxy_kafee | 0'
+      - '🇹🇷TR | 🟢 | vless | @proxy_kafee | 5'
       - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 7'
       - '🇨🇭CH | 🟢 | vless | @Outline_Vpn | 9'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 11'
@@ -83,10 +81,9 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 132'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 136'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 141'
-      - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 5'
-      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 11'
-      - '❔XX | 🔴 | vless | @ConfigsHUB | 13'
-      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 19'
+      - '🇰🇷KR | 🟢 | vless | @ConfigsHUB | 9'
+      - '🇩🇰DK | 🟢 | vless | @ConfigsHUB | 14'
+      - '🇩🇪DE | 🟢 | vless | @free1_vpn | 4'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 5'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 6'
       - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 7'
@@ -108,7 +105,6 @@ proxy-groups:
       - '❔XX | 🔴 | vless | @vpn_go67 | 18'
       - '❔XX | 🔴 | vless | @vpn_go67 | 19'
       - '❔XX | 🔴 | vless | @vpn_go67 | 21'
-      - '🇩🇪DE | 🟢 | vless | @kingofilter | 4'
   - name: URL-TEST
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -120,7 +116,7 @@ proxy-groups:
       - '🇫🇮FI | 🔴 | vless | @melov2ray | 37'
       - '🇫🇮FI | 🔴 | vless | @melov2ray | 53'
       - '🇩🇪DE | 🔴 | vless | @CUSTOMVPNSERVER | 17'
-      - '🇹🇷TR | 🟢 | vless | @proxy_kafee | 0'
+      - '🇹🇷TR | 🟢 | vless | @proxy_kafee | 5'
       - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 7'
       - '🇨🇭CH | 🟢 | vless | @Outline_Vpn | 9'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 11'
@@ -137,10 +133,9 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 132'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 136'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 141'
-      - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 5'
-      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 11'
-      - '❔XX | 🔴 | vless | @ConfigsHUB | 13'
-      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 19'
+      - '🇰🇷KR | 🟢 | vless | @ConfigsHUB | 9'
+      - '🇩🇰DK | 🟢 | vless | @ConfigsHUB | 14'
+      - '🇩🇪DE | 🟢 | vless | @free1_vpn | 4'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 5'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 6'
       - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 7'
@@ -162,7 +157,6 @@ proxy-groups:
       - '❔XX | 🔴 | vless | @vpn_go67 | 18'
       - '❔XX | 🔴 | vless | @vpn_go67 | 19'
       - '❔XX | 🔴 | vless | @vpn_go67 | 21'
-      - '🇩🇪DE | 🟢 | vless | @kingofilter | 4'
   - name: FALLBACK
     type: fallback
     url: http://www.gstatic.com/generate_204
@@ -173,7 +167,7 @@ proxy-groups:
       - '🇫🇮FI | 🔴 | vless | @melov2ray | 37'
       - '🇫🇮FI | 🔴 | vless | @melov2ray | 53'
       - '🇩🇪DE | 🔴 | vless | @CUSTOMVPNSERVER | 17'
-      - '🇹🇷TR | 🟢 | vless | @proxy_kafee | 0'
+      - '🇹🇷TR | 🟢 | vless | @proxy_kafee | 5'
       - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 7'
       - '🇨🇭CH | 🟢 | vless | @Outline_Vpn | 9'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 11'
@@ -190,10 +184,9 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 132'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 136'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 141'
-      - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 5'
-      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 11'
-      - '❔XX | 🔴 | vless | @ConfigsHUB | 13'
-      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 19'
+      - '🇰🇷KR | 🟢 | vless | @ConfigsHUB | 9'
+      - '🇩🇰DK | 🟢 | vless | @ConfigsHUB | 14'
+      - '🇩🇪DE | 🟢 | vless | @free1_vpn | 4'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 5'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 6'
       - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 7'
@@ -215,7 +208,6 @@ proxy-groups:
       - '❔XX | 🔴 | vless | @vpn_go67 | 18'
       - '❔XX | 🔴 | vless | @vpn_go67 | 19'
       - '❔XX | 🔴 | vless | @vpn_go67 | 21'
-      - '🇩🇪DE | 🟢 | vless | @kingofilter | 4'
 rules:
  - GEOIP,IR,DIRECT
  - MATCH,MANUAL
